docs: add strict code workflow rule + KNOWN_ISSUES #30 + .claude/
- doc/log/KNOWN_ISSUES.md: add #30 (未跑测试就 commit → CI 编译失败)
  + add #27/#28/#29 to index (these existed in body but not in index)
- .claude/CLAUDE.md (new): project-level AI rules
  - 5-step code change workflow (align + write → test → compile → commit)
  - 3-step Git + deploy workflow (commit → push + CI → SSH deploy)
  - project paths / env / namespace / supermemory maintenance
- C:\Users\PC\.claude\user-constraints.md: add 2026-06-24 entry
  (user-level cross-session, same workflow)

[背景] 2026-06-24 P0 #2 + #3 三连 commit 都没本地验证, 第一次 CI 编译失败才补 commit (d388ee9).
       教训: "本机 mvn 跑不通 = 流程阻断, 不能推给 CI". 新规则强制所有代码调整必先 test + 编译通过.

[覆盖] 云枢中台项目 (cloudplatform) + 其它涉及 Java/TS/Vue/SQL 修改的项目

[例外] 紧急 hotfix (事后补测) / 纯文档 (.md/.txt) / 纯注释 docstring

[关联]
- KNOWN_ISSUES #30: 完整坑记录 (5 个具体本地环境坑 + 8 条教训)
- doc/项目进度.md: 9 个 P0/P1 质量问题修复状态
- KNOWN_ISSUES #27-#29: 索引补全